# wglogd

./: Cargo.toml  Dockerfile  LICENSE  README.md  main.rs
wireguard-logd/DEBIAN/: control
wireguard-logd/etc/systemd/system/: wglogd.service
wireguard-logd/etc/wglogd/: config.toml
